finished testOnInheritenceTree finished testOnNestedClasses chenged return type of testwhenthen fixed searchAnnotation *****finale not tested*******